# DVM

./: CMakeLists.txt
cmake/: DVMConfig.cmake.in
lib/: CMakeLists.txt
tests/: CMakeLists.txt
